# UserbotApi

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
scripts/: test.sh
src/: __main__.py  auth.py  client.py  lib.py  test.py  userbot.py
tests/: __main__.py
