[project]
name = ""
version = ""
description = ""
authors = []
dependencies = [
    "pyrogram>=2.0.106",
    "tgcrypto>=1.2.5",
    "parsenv>=0.3.0",
    "fastapi>=0.99.1",
    "uvicorn>=0.22.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.scripts]
start = "python src"
